# fast-float-rust

./: .gitmodules  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: audit.yml  bench.yml  ci.yml  fuzz.yml  lint.yml
data/test-parse-golang/: main.rs
data/test-parse-random/: _common.rs  long-fractions.rs  runtests.py
data/test-parse-unittests/: main.rs
extras/data-tests/: Cargo.toml
extras/data-tests/src/: main.rs
extras/simple-bench/: Cargo.toml  README.md
extras/simple-bench/src/: main.rs  random.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fast_float.rs  roundtrip_f64.rs
src/: binary.rs  common.rs  decimal.rs  float.rs  lib.rs  number.rs  simple.rs
tests/: test_basic.rs  test_random.rs  test_soft_float.rs
