[package]
name = "fast-float"
version = "0.2.0"
authors = ["Ivan Smirnov <i.s.smirnov@gmail.com>"]
repository = "https://github.com/aldanor/fast-float-rust"
documentation = "https://docs.rs/fast-float"
description = "Fast floating-point number parser."
keywords = ["parser", "parsing", "parse", "float", "no-std"]
categories = ["parser-implementations", "parsing", "text-processing", "algorithms", "no-std"]
readme = "README.md"
license = "MIT OR Apache-2.0"
autobenches = false
edition = "2018"
exclude = ["benches/*", "extras/*"]

[features]
default = ["std"]
std = []
comprehensive_float_test = ["rand/std", "serde/std", "serde_derive", "std", "toml"]

[dependencies]
rand = { version = "0.4", optional = true }
serde = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }
toml = { version = "0.5", optional = true }

[dev-dependencies]
lexical-core = "0.7"
hexf-parse = "0.1"
ryu = "1.0"
fastrand = "1.4"
num-bigint = "0.3"

[workspace]
members = [".", "extras/data-tests", "extras/simple-bench"]

[profile.release]
lto = "fat"
codegen-units = 1

[package.metadata.docs.rs]
features = ["std"]

# COMPREHENSIVE FLOAT TESTS

[[bin]]
name = "few_ones"
path = "data/test-parse-random/few_ones.rs"
required-features = ["comprehensive_float_test"]

[[bin]]
name = "huge-pow10"
path = "data/test-parse-random/huge-pow10.rs"
required-features = ["comprehensive_float_test"]

[[bin]]
name = "long-fractions"
path = "data/test-parse-random/long-fractions.rs"
required-features = ["comprehensive_float_test"]

[[bin]]
name = "many-digits"
path = "data/test-parse-random/many-digits.rs"
required-features = ["comprehensive_float_test"]

[[bin]]
name = "rand-f64"
path = "data/test-parse-random/rand-f64.rs"
required-features = ["comprehensive_float_test"]

[[bin]]
name = "short-decimals"
path = "data/test-parse-random/short-decimals.rs"
required-features = ["comprehensive_float_test"]

[[bin]]
name = "subnorm"
path = "data/test-parse-random/subnorm.rs"
required-features = ["comprehensive_float_test"]

[[bin]]
name = "tiny-pow10"
path = "data/test-parse-random/tiny-pow10.rs"
required-features = ["comprehensive_float_test"]

[[bin]]
name = "u32-small"
path = "data/test-parse-random/u32-small.rs"
required-features = ["comprehensive_float_test"]

[[bin]]
name = "u64-pow2"
path = "data/test-parse-random/u64-pow2.rs"
required-features = ["comprehensive_float_test"]

[[bin]]
name = "test-parse-unittests"
path = "data/test-parse-unittests/main.rs"
required-features = ["comprehensive_float_test"]

[[bin]]
name = "test-parse-golang"
path = "data/test-parse-golang/main.rs"
required-features = ["comprehensive_float_test"]
