[package]
name = "fast-float-simple-bench"
version = "0.1.0"
authors = ["Ivan Smirnov <i.s.smirnov@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
fast-float2 = { path = "../.." }
anyhow = "1.0"
lexical = "7.0.4"
lexical-core = "1.0.5"
fastrand = "2.1.1"
fast-float = "0.2"
clap = { version = "4.5.23", features = ["derive"] }
